--- a/Library_System/src/main/java/com/alejandro/library_system/FrmMenu.form
+++ b/Library_System/src/main/java/com/alejandro/library_system/FrmMenu.form
@@ -64,22 +64,30 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
-              <Group type="102" attributes="0">
+              <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="btnPrestamo" alignment="0" pref="186" max="32767" attributes="0"/>
-                          <Component id="btnAgregarLibro" alignment="0" pref="186" max="32767" attributes="0"/>
-                          <Component id="btnVentas" alignment="0" pref="186" max="32767" attributes="0"/>
-                          <Component id="btnLector" alignment="0" pref="186" max="32767" attributes="0"/>
-                          <Component id="btnEditoriales" alignment="0" pref="186" max="32767" attributes="0"/>
-                          <Component id="btnClientes" alignment="0" pref="186" max="32767" attributes="0"/>
-                          <Component id="btnCompra" alignment="0" pref="186" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="btnEscritor" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="btnPrestamo" alignment="0" pref="186" max="32767" attributes="0"/>
+                                  <Component id="btnAgregarLibro" alignment="0" pref="186" max="32767" attributes="0"/>
+                                  <Component id="btnVentas" alignment="0" pref="186" max="32767" attributes="0"/>
+                                  <Component id="btnLector" alignment="0" pref="186" max="32767" attributes="0"/>
+                                  <Component id="btnEditoriales" alignment="0" pref="186" max="32767" attributes="0"/>
+                                  <Component id="btnClientes" alignment="0" pref="186" max="32767" attributes="0"/>
+                                  <Component id="btnCompra" alignment="0" pref="186" max="32767" attributes="0"/>
+                              </Group>
+                              <Component id="btnEscritor" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace pref="504" max="32767" attributes="0"/>
+                          <Component id="BtnCerrarSesion" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
-                  <EmptySpace pref="504" max="32767" attributes="0"/>
-                  <Component id="BtnCerrarSesion" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -88,7 +96,9 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                   <Component id="btnAgregarLibro" min="-2" pref="42" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="btnCompra" min="-2" pref="42" max="-2" attributes="0"/>
@@ -212,6 +222,14 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEscritorActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="jButton1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="jButton1"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
