--- a/Library_System/src/main/java/com/alejandro/library_system/FrmLecctor.form
+++ b/Library_System/src/main/java/com/alejandro/library_system/FrmLecctor.form
@@ -209,7 +209,7 @@
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Roboto Bk" size="14" style="1"/>
+          <Font name="Segoe UI Black" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Codigo Lector "/>
       </Properties>
@@ -217,7 +217,7 @@
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Roboto Bk" size="14" style="1"/>
+          <Font name="Segoe UI Black" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Direccion"/>
       </Properties>
@@ -232,7 +232,7 @@
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Roboto Bk" size="14" style="1"/>
+          <Font name="Segoe UI Black" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Telefono"/>
       </Properties>
@@ -247,7 +247,7 @@
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Roboto Bk" size="14" style="1"/>
+          <Font name="Segoe UI Black" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Id"/>
       </Properties>
@@ -260,7 +260,7 @@
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Roboto Bk" size="14" style="1"/>
+          <Font name="Segoe UI Black" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Nombre "/>
       </Properties>
@@ -268,7 +268,7 @@
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Roboto Bk" size="14" style="1"/>
+          <Font name="Segoe UI Black" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Apellido"/>
       </Properties>
@@ -276,7 +276,7 @@
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Roboto Bk" size="14" style="1"/>
+          <Font name="Segoe UI Black" size="12" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Edad"/>
       </Properties>
