--- a/Library_System/src/main/java/com/alejandro/library_system/FrmMenu.form
+++ b/Library_System/src/main/java/com/alejandro/library_system/FrmMenu.form
@@ -140,6 +140,9 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="btnAgregarLibro">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Black" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Agregar Libro"/>
           </Properties>
           <Events>
@@ -148,6 +151,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnCompra">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Black" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Compra"/>
           </Properties>
           <Events>
@@ -156,6 +162,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnEditoriales">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Black" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Editoriales"/>
           </Properties>
           <Events>
@@ -164,6 +173,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnClientes">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Black" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Clientes"/>
           </Properties>
           <Events>
@@ -172,6 +184,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnVentas">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Black" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Ventas"/>
           </Properties>
           <Events>
@@ -180,6 +195,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnLector">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Black" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Lector"/>
           </Properties>
           <Events>
@@ -188,6 +206,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnPrestamo">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Black" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Prestamo"/>
           </Properties>
           <Events>
@@ -216,6 +237,9 @@
         </Container>
         <Component class="javax.swing.JButton" name="btnEscritor">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Black" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Escritor"/>
           </Properties>
           <Events>
@@ -244,6 +268,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI Black" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Regresar"/>
           </Properties>
         </Component>
